removed duplicated function

--- a/user/example.py_highlighted.html
+++ b/user/example.py_highlighted.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     
-<!--StartFragment--><div style="color: #cccccc;background-color: #1f1f1f;font-family: Consolas, 'Courier New', monospace;font-weight: normal;font-size: 14px;line-height: 19px;white-space: pre;"><div><span style="color: #569cd6;">def</span><span style="color: #cccccc;"> </span><span style="color: #dcdcaa;">function</span><span style="color: #cccccc;">():</span></div><div><span style="color: #cccccc;">&nbsp; &nbsp; </span><span style="color: #c586c0;">pass</span></div><br><div><span style="color: #9cdcfe;">a</span><span style="color: #cccccc;"> </span><span style="color: #d4d4d4;">=</span><span style="color: #cccccc;"> </span><span style="color: #dcdcaa;">function</span><span style="color: #cccccc;">()</span></div><br><br></div><!--EndFragment-->
+<!--StartFragment--><div style="color: #cccccc;background-color: #1f1f1f;font-family: Consolas, 'Courier New', monospace;font-weight: normal;font-size: 14px;line-height: 19px;white-space: pre;"><div><span style="color: #569cd6;">def</span><span style="color: #cccccc;"> </span><span style="color: #dcdcaa;">function</span><span style="color: #cccccc;">():</span></div><div><span style="color: #cccccc;">&nbsp; &nbsp; </span><span style="color: #c586c0;">pass</span></div><br><div><span style="color: #cccccc;">a </span><span style="color: #d4d4d4;">=</span><span style="color: #cccccc;"> function()</span></div><br><br></div><!--EndFragment-->
 
 
 </body>
 </html>
-
